--- a/Miniforge3/construct.yaml
+++ b/Miniforge3/construct.yaml
@@ -10,6 +10,7 @@ channels:
   # when the end user adds the channel without the full URL
   # - https://conda.anaconda.org/conda-forge
   - conda-forge
+  - bioconda
 
 write_condarc: True
 # keep pkgs for space-saving implications for hardlinks when create new environments
@@ -26,6 +27,8 @@ specs:
 
 {% if name.startswith("Mambaforge") %}
   - mamba 0.16.0
+  - singularity 3.7.1
+  - snakemake 6.9.1-0
 {% endif %}
   - conda {{ version.split("-")[0] }}
 
