Replace snakemake with -minimal
Snakemake caused problems when running the generated installer:
Encountered problems while solving:
  - nothing provides requested ca-certificates 2021.10.8 ha878542_0
  - nothing provides requested libstdcxx-ng 11.2.0 he4da1e4_11
  - nothing provides requested tzdata 2021c he74cb21_0
  - nothing provides requested libgcc-ng 11.2.0 h1d223b6_11
  - nothing provides requested zlib 1.2.11 h36c2ea0_1013
  - nothing provides requested pyopenssl 21.0.0 pyhd8ed1ab_0
  - package expat-2.4.1-h9c3ff4c_0 requires libgcc-ng >=9.3.0, but none of the providers can be installed
  - package libglib-2.68.4-h174f98d_1 requires zlib >=1.2.11,<1.3.0a0, but none of the providers can be installed
  - package atk-1.0-2.36.0-h3371d22_4 requires libglib >=2.64.6,<3.0a0, but none of the providers can be installed
  - package graphviz-2.49.1-h85b4f2f_0 requires libzlib >=1.2.11,<1.3.0a0, but none of the providers can be installed
  - package imagemagick-7.1.0_10-pl5321hb118871_0 requires libzlib >=1.2.11,<1.3.0a0, but none of the providers can be installed
  - package protobuf-3.18.1-py39he80948d_0 requires libprotobuf 3.18.1.*, but none of the providers can be installed
  - package pygraphviz-1.7-py39h78163bd_0 requires graphviz >=2.40.1,<3.0a0, but none of the providers can be installed
  - package snakemake-6.9.1-hdfd78af_0 requires imagemagick >=7.0, but none of the providers can be installed
  - package gtk2-2.24.33-h539f30e_1 requires libglib >=2.68.0,<3.0a0, but none of the providers can be installed
  - package google-api-core-2.1.0-pyhd8ed1ab_0 requires protobuf >=3.12.0, but none of the providers can be installed
  - package google-cloud-storage-1.42.3-pyh6c4a22f_0 requires protobuf, but none of the providers can be installed
  - package google-cloud-core-2.1.0-pyh6c4a22f_0 requires grpcio >=1.8.2,<2.0.0dev, but none of the providers can be installed

ERROR   Could not solve for environment specs

--- a/Miniforge3/construct.yaml
+++ b/Miniforge3/construct.yaml
@@ -28,7 +28,7 @@ specs:
 {% if name.startswith("Mambaforge") %}
   - mamba 0.16.0
   - singularity 3.7.1
-  - snakemake 6.9.1
+  - snakemake-minimal 6.9.1
 {% endif %}
   - conda {{ version.split("-")[0] }}
 
